bobcat (3.17.00)

  * New split members added to the String class, removing the private split
    facility from Process, which are now superfluous, as they are covered by
    String's split facilities.

  * The source header file of classes defining function templates and
    inline-members now have their template definitions in .i files, one .i
    file per function.
    This change was implemented to simplify function template and inline
    function maintenance, and to have source clas header files representing 
    class interfaces as cleanly as possible.

  * Removed the man-page of the deprecated class Errno

  * All class-specific icmconf files were standardized (and cleaned)

  * NOTE: 
        the way the linker handles required libraries has changed
        See, e.g., 

            http://fedoraproject.org/wiki/UnderstandingDSOLinkChange

        Due to this change programs depending on the bobcat may now require
        explicit specifications of libraries. Most likely the linke will come
        with a suggestion. The library libcrypto is a likely candidate for
        explicit inclusion. If so, use -lcrypto when linking such 
        depending programs.

    
    NOTE: DURING THE TRANSITION TO 3.17.00 INSTALL.im SPECIFIES STATIC LIBRARY
    CONSTRUCTION

    ******* WIP: DO NOT USE *********


bobcat (3.16.00)

  * Re-implemented process/analyzecommand.cc, improving the wait it handles
    escaped characters and quoted and double quoted strings.

  * Added additional demos to the process man-page.

  * Added the static member Exception::protection to the Exception class.

  * Gzipped files in the provided documentation no longer contain internal
    time-stamps. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 Sep 2013 15:53:51 +0200

bobcat (3.15.00)

  * Added class IFilterStreambuf, implementing filtering like, e.g., openSSL
    BIOs.

  * Added class ISymCryptStreambuf and its base class 