@@ -1,6 +1,3 @@
-
-Add getword(), setword(), and other common operators to BigInt
-
 Provide examples in the following man-pages:
 
 ifdstreambuf.yo
