@@ -1,0 +1,4 @@
+inline size_t BigInt::nWords() const
+{
+    return d_bn.top;
+}
