@@ -1,0 +1,4 @@
+size_t constexpr BigInt::sizeOfWord()
+{
+    return sizeof(Word);
+}
